k8s/infra/tailscale/minio-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: data
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: minio-console
      port:
        number: 9090
  tls:
    - hosts:
        - minio-console
